--- a/index.html
+++ b/index.html
@@ -1,12 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>test</title>
+    <title>NBA Warriors schedule</title>
+    <link rel="stylesheet" type="text/css" href="projects/from/styles/style.css">
 </head>
+
 <body>
-    <p>来学前端<p>
+    <div class="box" id="mod-schedule">
+        <div class="mod-schedule-title" align="center">
+            <a href="http://china.nba.com/teams/schedule/#!/warriors" >
+    2016-2017 勇士队赛程</a>
+        </div>
+        <div class="mod-schedule-content">
+            <table cellpadding="0" cellspacing="0" class="schedule-head">
+                <tbody id="dates">
+                    <tr>
+                        <th width="26%">日期</th>
+                        <th width="16%">时间</th>
+                        <th width="20%">对手</th>
+                        <th width="12%">结果</th>
+                        <th width="26%">比分</th>
+                    </tr>
+                </tbody>
+            </table>
+            <table cellpadding="3px" cellspacing="0" class="schedule-body" >
+                <tbody align="center">
+                    <tr>
+                        <td width="26%">05月09日</td>
+                        <td width="16%">09:00</td>
+                        <td width="20%">爵士</td>
+                        <td width="12%">胜</td>
+                        <td width="26%" class="lf">121-95</td>
+                    </tr>
+                    <tr>
+                        <td width="26%">05月15日</td>
+                        <td width="16%">03:30</td>
+                        <td width="20%">马刺</td>
+                        <td width="12%">胜</td>
+                        <td width="26%" class="lf">113-111</td>
+                    </tr>
+                    <tr>
+                        <td width="26%">05月17日</td>
+                        <td width="16%">09:00</td>
+                        <td width="20%">马刺</td>
+                        <td width="12%">胜</td>
+                        <td width="26%" class="lf">136-100</td>
+                    </tr>
+                    <tr>
+                        <td width="26%">05月21日</td>
+                        <td width="16%">09:00</td>
+                        <td width="20%">马刺</td>
+                        <td width="12%">胜</td>
+                        <td width="26%" class="lf">120-108</td>
+                    </tr>
+                    <tr>
+                        <td width="26%">05月23日</td>
+                        <td width="16%">09:00</td>
+                        <td width="20%">马刺</td>
+                        <td width="12%">胜</td>
+                        <td width="26%" class="lf">129-115</td>
+                    </tr>
+                    <tr>
+                        <td width="26%">06月02日</td>
+                        <td width="16%">09:00</td>
+                        <td width="20%">骑士</td>
+                        <td width="12%">胜</td>
+                        <td width="26%" class="lf">113-91</td>
+                    </tr>
+                    <tr>
+                        <td width="26%">06月05日</td>
+                        <td width="16%">08:00</td>
+                        <td width="20%">骑士</td>
+                        <td width="12%">胜</td>
+                        <td width="26%" class="lf">132-113</td>
+                    </tr>
+                    <tr>
+                        <td width="26%">06月08日</td>
+                        <td width="16%">09:00</td>
+                        <td width="20%">骑士</td>
+                        <td width="12%">胜</td>
+                        <td width="26%" class="lf">118-113</td>
+                    </tr>
+                    <tr>
+                        <td width="26%">06月10日</td>
+                        <td width="16%">09:00</td>
+                        <td width="20%">骑士</td>
+                        <td width="12%">负</td>
+                        <td width="26%" class="lf">116-137</td>
+                    </tr>
+                    <tr>
+                        <td width="26%">06月13日</td>
+                        <td width="16%">09:00</td>
+                        <td width="20%">骑士
+                        </td>
+                        <td width="12%">胜</td>
+                        <td width="26%" class="lf">129-120</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
+
 </html>
