--- a/pages/pages.html
+++ b/pages/pages.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>pages</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_382655_etc9zum5j1rr7ldi.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://cdn.bootcss.com/normalize/7.0.0/normalize.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
     <section class="page">
@@ -25,10 +24,10 @@
         </main>
         <footer>
             <span class="write">谈写作</span>
-            <i class="fa fa-eye"></i><span class="num">166</span>
-                <i class="fa fa-commenting"></i><span class="num">8</span>
-                <i class="fa fa-heart"></i><span class="num">22</span>
-                <i class="fa fa-cny"></i><span class="num">1</span>
+            <span class="iconfont icon-like"></span><span class="date">22</span>
+            <span class="iconfont icon-money"></span><span class="date">2</span>
+            <span class="iconfont icon-comment"></span><span class="date">7</span>
+            <span class="iconfont icon-view"></span><span class="date">47</span>
         </footer>
     </section>
 </body>
