--- a/project01/index.html
+++ b/project01/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>first page</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <nav>
@@ -40,11 +41,11 @@
         </div>
     </header>
     <section class="profile">
-        <div class="pro-inner">
-            <div class="pro-header">
+        <div class="proile-inner">
+            <div class="profile-header">
                 <h1>Profile</h1>
             </div>
-            <div class="pro-content">
+            <div class="profile-content">
                 <ul>
                     <li>
                         <div class="yitong"><img src="" alt="COLLEGE OF CHONGQING UNIVERSITY OF POST AND TELECOM"></div>
@@ -65,10 +66,195 @@
             </div>
         </div>
     </section>
-    <section class="project"></section>
-    <section class="blog"></section>
-    <section class="experience"></section>
-    <section class="contact"></section>
-    <footer></footer>
+    <section class="project">
+        <div class="project-inner">
+            <div class="project-header">
+                <h1>Project</h1>
+            </div>
+            <div class="project-content">
+                <ul>
+                    <li class="proj-item">
+                        <div class="proj-pic">
+                            <img src="" alt="">
+                            <div class="shade">+</div>
+                        </div>
+                        <div class="proj-detail">
+                            <h2>Microsoft</h2>
+                            <p>Skype for Mac</p>
+                        </div>
+                    </li>
+                    <li class="proj-item">
+                        <div class="proj-pic">
+                            <img src="" alt="">
+                            <div class="shade">+</div>
+                        </div>
+                        <div class="proj-detail">
+                            <h2>Microsoft</h2>
+                            <p>Skype for Mac</p>
+                        </div>
+                    </li>
+                    <li class="proj-item">
+                        <div class="proj-pic">
+                            <img src="" alt="">
+                            <div class="shade">+</div>
+                        </div>
+                        <div class="proj-detail">
+                            <h2>Microsoft</h2>
+                            <p>Skype for Mac</p>
+                        </div>
+                    </li>
+                    <li class="proj-item">
+                        <div class="proj-pic">
+                            <img src="" alt="">
+                            <div class="shade">+</div>
+                        </div>
+                        <div class="proj-detail">
+                            <h2>Microsoft</h2>
+                            <p>Skype for Mac</p>
+                        </div>
+                    </li>
+                    <li class="proj-item">
+                        <div class="proj-pic">
+                            <img src="" alt="">
+                            <div class="shade">+</div>
+                        </div>
+                        <div class="proj-detail">
+                            <h2>Microsoft</h2>
+                            <p>Skype for Mac</p>
+                        </div>
+                    </li>
+                    <li class="proj-item">
+                        <div class="proj-pic">
+                            <img src="" alt="">
+                            <div class="shade">+</div>
+                        </div>
+                        <div class="proj-detail">
+                            <h2>Microsoft</h2>
+                            <p>Skype for Mac</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="experience">
+        <div class="experience-inner">
+            <div class="experience-header">
+                <h1>Experience</h1>
+            </div>
+            <div class="experience-content">
+                <ul>
+                    <li class="exp-item">
+                        <div class="exp-pic">
+                             <img src="" alt="">
+                        </div>
+                        <div class="exp-detail">
+                            <h2>time</h2>
+                            <h2>team</h2>
+                            <p>detail</p>
+                       </div>
+                    </li>
+                    <li class="exp-item">
+                         <div class="exp-pic">
+                             <img src="" alt="">
+                        </div>
+                        <div class="exp-detail">
+                            <h2>time</h2>
+                            <h2>team</h2>
+                            <p>detail</p>
+                       </div>
+                    </li>
+                    <li class="exp-item">
+                         <div class="exp-pic">
+                             <img src="" alt="">
+                        </div>
+                        <div class="exp-detail">
+                            <h2>time</h2>
+                            <h2>team</h2>
+                            <p>detail</p>
+                       </div>
+                    </li>
+                    <li class="exp-item">
+                         <div class="exp-pic">
+                             <img src="" alt="">
+                        </div>
+                        <div class="exp-detail">
+                            <h2>time</h2>
+                            <h2>team</h2>
+                            <p>detail</p>
+                       </div>
+                    </li>
+                    <li class="exp-item">
+                         <div class="exp-pic">
+                             <img src="" alt="">
+                        </div>
+                        <div class="exp-detail">
+                            <h2>time</h2>
+                            <h2>team</h2>
+                            <p>detail</p>
+                       </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="blog">
+        <div class="blog-inner">
+            <div class="blog-header">
+                <h1>Blog</h1>
+            </div>
+            <div class="blog-content">
+                <ul>
+                    <li class="blog-item">
+                        <div class="blog-pic">
+                            <img src="" alt="">
+                        </div>
+                        <div class="blog-title"></div>
+                        <div class="autor"></div>
+                    </li>
+                    <li class="blog-item">
+                        <div class="blog-pic">
+                            <img src="" alt="">
+                        </div>
+                        <div class="blog-title"></div>
+                        <div class="autor"></div>
+                    </li>
+                    <li class="blog-item">
+                        <div class="blog-pic">
+                            <img src="" alt="">
+                        </div>
+                        <div class="blog-title"></div>
+                        <div class="autor"></div>
+                    </li>
+                </ul>
+            </div>
+            <div class="blog-footer">
+                <p>More blog please click here <a href="http://www.jianshu.com/u/a7892be9a3bb">Blog</a></p>
+            </div>
+        </div>
+    </section>   
+    <section class="contact">
+        <div class="contact-inner">
+            <div class="contact-header">
+                <h1>Contact Me</h1>
+            </div>
+            <div class="contact-content">
+                <form action="">
+                    <div class="cntact-item">
+                        <input type="text" placeholder="Your Name">
+                        <input type="text" placeholder="Email">
+                        <input type="text" placeholder="Your Phone">
+                    </div>
+                    <textarea name="" id="" cols="65" rows="16" placeholder="Your Message"></textarea>
+                </form>
+                <div class="btn">
+                    <input class="" type="submit" value="Send Message">
+                </div>     
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="cell">Copyright @ Your Website 2017</div>
+    </footer>
 </body>
 </html>
