--- a/project01/index.html
+++ b/project01/index.html
@@ -47,19 +47,23 @@
             </div>
             <div class="profile-content">
                 <ul>
-                    <li>
-                        <div class="yitong"><img src="" alt="COLLEGE OF CHONGQING UNIVERSITY OF POST AND TELECOM"></div>
+                    
+                    <li class="profile-item">
+                        <div class="school"><img class="pro-icon" src="images/profile.png" alt="Issoftstone"></div>
+                        <ul class="pro-dd">
+                            <li>Name: Dong Zuo</li>
+                            <li>Age: 23</li>
+                            <li>Nationality: Xinjiang</li>
+                        </ul>
+                    </li>
+                    <li class="profile-item">
+                        <div class="company"><img class="pro-icon" src="images/company.png" alt="Issoftstone"></div>
                         <div class="name">COLLEGE OF CHONGQING UNIVERSITY OF POST AND TELECOM</div>
                         <div class="detail"></div>
                     </li>
-                    <li>
-                        <div class="isoftstone"><img src="" alt="Issoftstone"></div>
-                        <div class="name">Isoftstone</div>
-                        <div class="detail"></div>
-                    </li>
-                    <li>
-                        <div class="pactera"><img src="" alt="Pactera"></div>
-                        <div class="name">Pactera</div>
+                    <li class="profile-item">
+                        <div class="number"><img class="pro-icon" src="images/call.png" alt="Pactera"></div>
+                        <div class="name">Phone</div>
                         <div class="detail"></div>
                     </li>
                 </ul>
