--- a/poject02/index.html
+++ b/poject02/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dangal</title>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_386549_yibsy8jlcf0tfbt9.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_386549_4tih7b86v7td42t9.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -50,25 +50,19 @@
             <p>We provide the best service for you</p>
             <ul class="clearfix">
                 <li>
-                    <span class="iconfont icon-cart">
-
-                    </span>
+                    <span class="iconfont icon-cart"></span>
                     <h3>E-Commerce</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore
                         harum ex magni, dicta impedit.</p>
                 </li>
                 <li>
-                    <span class="iconfont icon-pc">
-
-                    </span>
+                    <span class="iconfont icon-pc"></span>
                     <h3>Responsive Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore
                         harum ex magni, dicta impedit.</p>
                 </li>
                 <li>
-                    <span class="iconfont icon-lock">
-
-                    </span>
+                    <span class="iconfont icon-lock"></span>
                     <h3>Web Security</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore
                         harum ex magni, dicta impedit.</p>
@@ -111,7 +105,105 @@
                 </figure>
             </div>
         </section>
-        <section></section>
+        <section>
+            <h2>Character</h2>
+            <p>Major actor profile</p>
+            <div class="character">
+                <div class="actor odd">
+                    <div class="detail">
+                        <h3>Dum Cobb</h3>
+                        <h3>Leonardo DiCaprio</h3>
+                        <p>Male one, specifically to steal someone else's dream of thinking, is the gang of thieves thief's
+                            leader. </p>
+                    </div>
+                    <div class="photo">
+                        <img src="images/actor01.jpg" alt="">
+                    </div>
+                    <div class="block"></div>
+                </div>
+                <div class="actor even">
+                    <div class="detail">
+                        <h3>Arthur</h3>
+                        <h3>Joseph Gordon-Levitt</h3>
+                        <p>Dum Cobb's assistant, in the front of the post, Dum Cobb's old partner.</p>
+                    </div>
+                    <div class="photo">
+                        <img src="images/actor02.jpg" alt="">
+                    </div>
+                </div>
+                <div class="actor odd">
+                    <div class="detail">
+                        <h3>Adrian</h3>
+                        <h3>Ellen Page</h3>
+                        <p>Tom Cobb's assistant, the design of the dream building.</p>
+                    </div>
+                    <div class="photo">
+                        <img src="images/actor03.jpg" alt="">
+                    </div>
+                </div>
+                <div class="actor even">
+                    <div class="detail">
+                        <h3>Saito</h3>
+                        <h3>Ken Watanabe</h3>
+                        <p>Saito's account of his mind's implantation of the minds of his father's business 
+                        is the head of the plan.</p>
+                    </div>
+                    <div class="photo">
+                        <img src="images/actor04.jpg" alt="">
+                    </div>
+                </div>
+                <div class="actor odd">
+                    <div class="detail">
+                        <h3>Mel</h3>
+                        <h3>Marion Cotillard</h3>
+                        <p>Dum Cobb's wife, female one, want to keep him in the dream room, has been disturbing the plan of
+                            the road.</p>
+                    </div>
+                    <div class="photo">
+                        <img src="images/actor05.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section> 
+            <h2>Team</h2>
+            <p>Follow our producer</p>
+            <div class="team">
+                <ul class="clearfix">
+                    <li class="member">
+                        <img src="images/member01.jpg" alt="">
+                        <div>
+                            <h3>Christopher Nolan</h3>
+                            <p>Director</p>
+                            <span class="iconfont icon-twitter icon-member"></span>
+                            <span class="iconfont icon-facebook icon-member"></span>
+                            <span class="iconfont icon-linkin icon-member"></span>
+                        </div>
+                    </li>
+                    <li class="member">
+                        <img src="images/member02.jpg" alt="">
+                        <div>
+                            <h3>Leonardo DiCaprio</h3>
+                            <p>Male one</p>
+                            <span class="iconfont icon-twitter icon-member"></span>
+                            <span class="iconfont icon-facebook icon-member"></span>
+                            <span class="iconfont icon-linkin icon-member"></span>
+                        </div>
+                    </li>
+                    <li class="member">
+                        <img src="images/member03.jpg" alt="">
+                        <div>
+                            <h3>Hans Zimmer</h3>
+                            <p>Record Producer</p>
+                            <span class="iconfont icon-twitter icon-member"></span>
+                            <span class="iconfont icon-facebook icon-member"></span>
+                            <span class="iconfont icon-linkin icon-member"></span>
+                        </div>
+                    </li>
+                </ul>
+                <p class="text">"The plot moves between dreams and reality and is defined as a contemporary action sci-fi film that takes place within the conscious structure"</p>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
