--- a/poject02/index.html
+++ b/poject02/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dangal</title>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_386549_4tih7b86v7td42t9.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_386549_4tih7b86v7td42t9.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
