--- a/poject02/index.html
+++ b/poject02/index.html
@@ -145,8 +145,9 @@
                     <div class="detail">
                         <h3>Saito</h3>
                         <h3>Ken Watanabe</h3>
-                        <p>Saito's account of his mind's implantation of the minds of his father's business 
-                        is the head of the plan.</p>
+                        <p>Saito's account of his mind's implantation of the minds of his father's business is the head of the
+                            plan.
+                        </p>
                     </div>
                     <div class="photo">
                         <img src="images/actor04.jpg" alt="">
@@ -165,7 +166,7 @@
                 </div>
             </div>
         </section>
-        <section> 
+        <section>
             <h2>Team</h2>
             <p>Follow our producer</p>
             <div class="team">
@@ -201,11 +202,45 @@
                         </div>
                     </li>
                 </ul>
-                <p class="text">"The plot moves between dreams and reality and is defined as a contemporary action sci-fi film that takes place within the conscious structure"</p>
+                <p class="text">"The plot moves between dreams and reality and is defined as a contemporary action sci-fi film that takes
+                    place within the conscious structure"</p>
+            </div>
+        </section>
+        <section class="form-bg">
+            <div class="container">
+                <h1>Contact US</h1>
+                <form class="clearfix">
+                    <div class="input-box">
+                        <input type="text" placeholder="Your Name">
+                        <input type="text" placeholder="Email">
+                        <input type="text" placeholder="Your Phone">
+                    </div>
+                    <div class="input-box">
+                        <textarea name="" id="" cols="65" rows="16" placeholder="Your Message"></textarea>
+                    </div>
+                </form>
+                <div>
+                    <a class="button" href="#">Send Message</a>
+                </div>
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container clearfix">
+            <div class="foot design">
+                <span>Design by @ZD-ong</span>
+            </div>
+            <div class="foot follow">
+                    <span class="iconfont icon-twitter icon-member"></span>
+                    <span class="iconfont icon-facebook icon-member"></span>
+                    <span class="iconfont icon-linkin icon-member"></span>
+            </div>
+            <div class="foot other">
+                <a class="info" href="#">Privacy Policy</a>
+                <a class="info" href="#">Terms of Use</a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
