--- a/poject02/index.html
+++ b/poject02/index.html
@@ -228,7 +228,7 @@
     <footer>
         <div class="container clearfix">
             <div class="foot design">
-                <span>Design by @ZD-ong</span>
+                <span>Designed by @ZD-ong</span>
             </div>
             <div class="foot follow">
                     <span class="iconfont icon-twitter icon-member"></span>
