--- a/poject02/index.html
+++ b/poject02/index.html
@@ -206,6 +206,32 @@
                     place within the conscious structure"</p>
             </div>
         </section>
+        <section>
+            <div class="adv">
+            <ul class="brand clearfix">
+                <li>
+                    <a href="#">
+                        <img src="images/envato.jpg" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="images/designmodo.jpg" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="images/themeforest.jpg" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="images/creative-market.jpg" alt="">
+                    </a>
+                </li>
+            </ul>
+        </div>
+        </section>
         <section class="form-bg">
             <div class="container">
                 <h1>Contact US</h1>
@@ -228,7 +254,7 @@
     <footer>
         <div class="container clearfix">
             <div class="foot design">
-                <span>Designed by @ZD-ong</span>
+                <span>Design by @ZD-ong</span>
             </div>
             <div class="foot follow">
                     <span class="iconfont icon-twitter icon-member"></span>
