--- a/poject02/index.html
+++ b/poject02/index.html
@@ -48,7 +48,7 @@
         <section>
             <h2>Services</h2>
             <p>We provide the best service for you</p>
-            <ul class="clearfix">
+            <ul class="service clearfix">
                 <li>
                     <span class="iconfont icon-cart"></span>
                     <h3>E-Commerce</h3>
