--- a/poject02/index.html
+++ b/poject02/index.html
@@ -256,7 +256,7 @@
             <div class="foot design">
                 <span>Design by @ZD-ong</span>
             </div>
-            <div class="foot follow">
+            <div class="foot">
                     <span class="iconfont icon-twitter icon-member"></span>
                     <span class="iconfont icon-facebook icon-member"></span>
                     <span class="iconfont icon-linkin icon-member"></span>
