--- a/Sign in/login.html
+++ b/Sign in/login.html
@@ -14,10 +14,10 @@
         <a class="login" href="#"><i class="fa fa-user-circle"></i></a>
     </header>
     <main>
+        <!--登录-->
         <div class="flip-modal login">
             <div class="modal modal-login">
-                <a ckass="close" href="#">
-                    <i class="fa fa-close"></i>
+                <a class="close fa fa-close" href="#">
                 </a>
                 <div class="tabs">
                     <a class="login active" href="#">登陆</a>
@@ -40,6 +40,7 @@
                     </form>
                 </div>
             </div>
+            <!--注册-->
             <div class="modal modal-register">
                 <a class="close fa fa-close" href="#"></a>
                 <div class="tabs">
@@ -54,11 +55,11 @@
                             <input name="username" type="text" placeholder="输入用户名">
                         </div>
                         <div class="input-field">
-                            <i class="fa fa-clock"></i>
-                            <input name="username" type="password" placeholder="输入密码">
+                            <i class="fa fa-lock"></i>
+                            <input name="password" type="password" placeholder="输入密码">
                         </div>
                         <div class="input-field">
-                            <i class="fa fa-clock"></i>
+                            <i class="fa fa-lock"></i>
                             <input name="password2" type="password" placeholder="再次输入密码">
                         </div>
                         <div class="input-field">
@@ -69,6 +70,6 @@
             </div>
         </div>
     </main>
-    <script></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
