--- a/OnlineMusic/index.html
+++ b/OnlineMusic/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425781_tlow755coj8xgvi.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_425781_tlow755coj8xgvi.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="scripts/jquery-3.2.1.min.js">
     <title>Music</title>
 </head>
 
@@ -32,8 +31,8 @@
                 </div>
             </div>
             <div class="info clearfix">
-                <div class="album-name">Ology</div>
-                <div class="description">Gallant – Ology</div>
+                <div class="album-name"></div>
+                <div class="description"></div>
                 <div class="data">
                     <span class="iconfont icon-listen"><span class="word">666</span></span>
                     <span class="iconfont icon-like"><span class="word">58</span></span>
@@ -47,16 +46,16 @@
                     </div>
                     
                 </div>
-                <div class="time">00:00</div>
-                <div class="song-name">Talking to Myself</div>
-                <div class="author">Gallant</div>
+                <div class="time"></div>
+                <div class="song-name"></div>
+                <div class="author"></div>
             </div>
         </div>
         <div class="footer">
             <div class="album-list">
                 <figure>
                     <a href="#"><img src="images/album1.jpg" alt="album1"></a>
-                    <figcaption>Ology</figcaption>
+                    <figcaption>Maroon 5</figcaption>
                 </figure>
                 <figure>
                     <a href="#"><img src="images/album2.jpg" alt="album2"></a>
@@ -81,6 +80,8 @@
             </div>
         </div>
     </div>
+    <script src="scripts/script.js"></script>
+    <script src="script/jquery-3.2.1.min.js"></script>
 </body>
 
 </html>
