--- a/OnlineMusic/index.html
+++ b/OnlineMusic/index.html
@@ -81,6 +81,7 @@
         </div>
     </div>
     <script src="scripts/script.js"></script>
+    <script src="script/jquery-3.2.1.min.js"></script>
 </body>
 
 </html>
