--- a/OnlineMusic/index.html
+++ b/OnlineMusic/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="control-panel">
                     <span class="iconfont icon-like"></span>
-                    <span class="iconfont icon-stop"></span>
+                    <span class="iconfont pause icon-stop"></span>
                     <span class="iconfont icon-next"></span>
                 </div>
             </div>
