--- a/OnlineMusic/index.html
+++ b/OnlineMusic/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425781_tlow755coj8xgvi.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_425781_9g6pphh23ifz85mi.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Music</title>
 </head>
@@ -20,9 +20,26 @@
             </a>
         </div>
         <div class="main">
+            <div class="flip-modal">
+                <div class="modal modal-login"></div>
+                <div class="modal mldal-register"></div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <div class="control clearfix">
                 <div class="album-img">
-                    <img src="images/album1.jpg" alt="album1">
                 </div>
                 <div class="control-panel">
                     <span class="iconfont icon-like"></span>
@@ -46,7 +63,7 @@
                     </div>
                     
                 </div>
-                <div class="time"></div>
+                <div class="time clearfix"></div>
                 <div class="song-name"></div>
                 <div class="author"></div>
             </div>
@@ -55,7 +72,7 @@
             <div class="album-list">
                 <figure>
                     <a href="#"><img src="images/album1.jpg" alt="album1"></a>
-                    <figcaption>Maroon 5</figcaption>
+                    <figcaption>What Lovers Do</figcaption>
                 </figure>
                 <figure>
                     <a href="#"><img src="images/album2.jpg" alt="album2"></a>
@@ -63,19 +80,19 @@
                 </figure>
                 <figure>
                     <a href="#"><img src="images/album3.jpg" alt="album3"></a>
-                    <figcaption>Gore</figcaption>
+                    <figcaption>Blue...</figcaption>
                 </figure>
                 <figure>
                     <a href="#"><img src="images/album4.jpg" alt="album4"></a>
-                    <figcaption>Highly Suspect</figcaption>
+                    <figcaption>I Feel It Coming</figcaption>
                 </figure>
                 <figure>
                     <a href="#"><img src="images/album5.jpg" alt="album4"></a>
-                    <figcaption>Coloring Book</figcaption>
+                    <figcaption>Despacito</figcaption>
                 </figure>
                 <figure>
                     <a href="#"><img src="images/album6.jpg" alt="album5"></a>
-                    <figcaption>Joanne</figcaption>
+                    <figcaption>I'm the One</figcaption>
                 </figure>
             </div>
         </div>
