--- a/OnlineMusic/index.html
+++ b/OnlineMusic/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425781_9g6pphh23ifz85mi.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_425781_9g6pphh23ifz85mi.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Music</title>
 </head>
@@ -20,23 +20,11 @@
             </a>
         </div>
         <div class="main">
-            <div class="flip-modal">
+            
+            <!-- <div class="flip-modal">
                 <div class="modal modal-login"></div>
                 <div class="modal mldal-register"></div>
-            </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </div> -->
 
             <div class="control clearfix">
                 <div class="album-img">
@@ -71,27 +59,27 @@
         <div class="footer">
             <div class="album-list">
                 <figure>
-                    <a href="#"><img src="images/album1.jpg" alt="album1"></a>
+                    <img src="images/album1.jpg" alt="album1">
                     <figcaption>What Lovers Do</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><img src="images/album2.jpg" alt="album2"></a>
+                    <img src="images/album2.jpg" alt="album2">
                     <figcaption>Starboy</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><img src="images/album3.jpg" alt="album3"></a>
+                    <img src="images/album3.jpg" alt="album3">
                     <figcaption>Blue...</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><img src="images/album4.jpg" alt="album4"></a>
+                    <img src="images/album4.jpg" alt="album4">
                     <figcaption>I Feel It Coming</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><img src="images/album5.jpg" alt="album4"></a>
+                    <img src="images/album5.jpg" alt="album5">
                     <figcaption>Despacito</figcaption>
                 </figure>
                 <figure>
-                    <a href="#"><img src="images/album6.jpg" alt="album5"></a>
+                    <img src="images/album6.jpg" alt="album6">
                     <figcaption>I'm the One</figcaption>
                 </figure>
             </div>
