--- a/OnlineMusic/index.html
+++ b/OnlineMusic/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425781_9g6pphh23ifz85mi.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_425781_twpvfyl3dzmbcsor.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Music</title>
 </head>
@@ -21,10 +21,59 @@
         </div>
         <div class="main">
             
-            <!-- <div class="flip-modal">
-                <div class="modal modal-login"></div>
-                <div class="modal mldal-register"></div>
-            </div> -->
+            <div class="flip-modal login">
+                <div class="modal modal-login">
+                    <a class="iconfont icon-close" href="#"></a>
+                    <div class="tabs">
+                        <a href="#" class="login active">登陆</a>
+                        <a href="#" class="register">注册</a>
+                    </div>
+                    <div class="modal-content">
+                        <div class="errormsg"></div>
+                        <form action="/login" method="post">
+                            <div class="input-field">
+                                <span class="iconfont icon-user"></span>
+                                <input name="username" type="text" placeholder="用户名">
+                            </div>
+                            <div class="input-field">
+                                <span class="iconfont icon-lock"></span>
+                                <input name="password" type="password" placeholder="密码">
+                            </div>
+                            <div class="input-field">
+                                <input type="submit" value="登陆">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="modal modal-register">
+                    <a class="iconfont icon-close" href="#"></a>
+                    <div class="tabs">
+                        <a href="#" class="login">登陆</a>
+                        <a href="#" class="register active">注册</a>
+                    </div>
+                    <div class="modal-content">
+                        <div class="errormsg"></div>
+                        <form action="/register" method="post">
+                            <div class="input-field">
+                                <span class="iconfont icon-user"></span>
+                                <input name="username" type="text" placeholder="输入用户名">
+                            </div>
+                            <div class="input-field">
+                                <span class="iconfont icon-lock"></span>
+                                <input name="possword" type="password" placeholder="输入密码">
+                            </div>
+                            <div class="input-field">
+                                <span class="iconfont icon-lock"></span>
+                                <input name="possword2" type="password" placeholder="再次输入密码">
+                            </div>
+                            <div class="input-field">
+                                <input type="submit" value="注册">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
 
             <div class="control clearfix">
                 <div class="album-img">
@@ -58,6 +107,32 @@
         </div>
         <div class="footer">
             <div class="album-list">
+                <!-- <div class="pic"><img id="album1" src="images/album1.jpg" alt="album1"></div>
+                <div class="pic"><img src="images/album2.jpg" alt="album2"></div>
+                <div class="pic"><img src="images/album3.jpg" alt="album3"></div>
+                <div class="pic"><img src="images/album4.jpg" alt="album4"></div>
+                <div class="pic"><img src="images/album5.jpg" alt="album5"></div>
+                <div class="pic"><img src="images/album6.jpg" alt="album6"></div> -->
+                <!-- <ul>
+                    <li>1
+                        <img id="album1" src="images/album1.jpg" alt="album1">
+                    </li>
+                    <li>2
+                        <img src="images/album2.jpg" alt="album2">
+                    </li>
+                    <li>3
+                        <img src="images/album3.jpg" alt="album3">
+                    </li>
+                    <li>4
+                        <img src="images/album4.jpg" alt="album4">
+                    </li>
+                    <li>5
+                        <img src="images/album5.jpg" alt="album5">
+                    </li>
+                    <li>6
+                        <img src="images/album6.jpg" alt="album6">
+                    </li>
+                </ul> -->
                 <figure>
                     <img src="images/album1.jpg" alt="album1">
                     <figcaption>What Lovers Do</figcaption>
@@ -84,6 +159,7 @@
                 </figure>
             </div>
         </div>
+        <div id="show-modal"></div>
     </div>
     <script src="scripts/script.js"></script>
 </body>
