--- a/OnlineMusic/index.html
+++ b/OnlineMusic/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_425781_twpvfyl3dzmbcsor.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_425781_twpvfyl3dzmbcsor.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Music</title>
 </head>
