--- a/OnlineMusic/index.html
+++ b/OnlineMusic/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="cover"></div>
-    <div class="content hide">
+    <div class="content">
         <div class="header">
             <a href="#" class="login">
                 <span class="iconfont icon-login"></span>
@@ -161,7 +161,7 @@
         </div>
         <div id="show-modal"></div>
     </div>
-    <div class="play">
+    <div class="play  hide">
         <div class="play-img"></div>
         <div class="update">
             <div class="play-bar">
