--- a/movie/index.html
+++ b/movie/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_441218_22ikrb0vtc3rqkt9.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_441218_2ab570bpfif11yvi.css">
     <title>豆瓣电影</title>
 </head>
 <body>
